pyEQL Changelog
===============

0.4-dev (in progress)
---------------------
 
 - Add ability to calculate dielectric constant based on solution composition for salts
 - Add database entries for the viscosity 'B' parameter for 63 more inorganic ions
 - Fix bug causing activity corrections for non 1:1 salts to be calculated incorrectly (#15)
 - Improve entry point for running automated tests (#16, thanks Hernan Grecco)

0.3.1 (2016-02-24)
------------------

 - Fix packaging problems preventing installation from PyPi
 - Fix character encoding issue in Erying_viscosity database file
 
0.3.0 (2016-01-15)
------------------

 - Add method to calculate the total concentration of an element in a solution
 - Add method to automatically generate certain solutions (like seawater)
 - Add method to calculate the hardness of a solution
 - Add method to calculate the alkalinity of a solution
 - Add method to calculate the charge balance of a solution
 - Add method to calculate the Bjerrum length
 - Add database entries for hydrated and ionic radii of common ions
 - Add database entries for the 'B' parameter in the Jones-Dole viscosity equation for common ions
 - Add test suites for solute property methods, hardness, osmotic coefficient, and Debye length
 - Improve logging system to work better when using pyEQL interactively
 - Improved README with graphics and rich formatting
 - Fix bug related to activity and osmotic coefficients for multivalent salts
 - Fix bug related to retreival of water properties
 - Documentation enhancements and fixes
 
0.2.2 (2015-08-28)
------------------

 - Fix bug in get_amount() causing no output when mass-based units were specified.

0.2.1 (2015-05-06)
------------------

 - Add 93 entries to diffusion coefficient database
 - Add 93 entries to Pitzer partial molar volume parameters database
 - Add 130 entries to Pitzer activity parameters database
 - Change extension for database files from .csv to .tsv