@@ -6,8 +6,10 @@ pyEQL Changelog
  
  - Add ability to calculate dielectric constant based on solution composition for salts
  - Add database entries for the viscosity 'B' parameter for 63 more inorganic ions
- - Fix bug causing activity corrections for non 1:1 salts to be calculated incorrectly (#15)
  - Improve entry point for running automated tests (#16, thanks Hernan Grecco)
+ - Fix bug causing activity corrections for non 1:1 salts to be calculated incorrectly (#15)
+ - Fix bug causing 'bad operand type' error when calculating osmotic pressure on some systems
+ - Fix bug causing ValueError exceptions when a solute has zero concentration
 
 0.3.1 (2016-02-24)
 ------------------
@@ -30,7 +32,7 @@ pyEQL Changelog
  - Improve logging system to work better when using pyEQL interactively
  - Improved README with graphics and rich formatting
  - Fix bug related to activity and osmotic coefficients for multivalent salts
- - Fix bug related to retreival of water properties
+ - Fix bug related to retrieval of water properties
  - Documentation enhancements and fixes
  
 0.2.2 (2015-08-28)
